<resources>
    <string name="app_name">Petagram</string>
    <string name="menu_name">Favoritos</string>
    <string name="nombre">Nombre de prueba</string>
    <string name="telefono">Telefono1231234</string>
    <string name="email">pepe@ejemplo.com</string>
    <string name="pnombre">nombre</string>
    <string name="ptelefono">telefono</string>
    <string name="pemail">email</string>

    <string name="plikes">0 Likes</string>

    <string name="menu_contacto">Contacto</string>
    <string name="texto_contacto">Texto de ejemplo mascota</string>

    <string name="menu_acercade">Acerca de</string>
    <string name="texto_acercade_1">Alejandro, programador de profesión, electrónico de afición.</string>
    <string name="texto_acercade_2">Reparto mi tiempo entre la silla delante del ordenador y la montaña.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nombre_email">Nombre a quien enviar correo</string>
    <string name="contenido_email">contenido del mensaje a enviar</string>
    <string name="boton_email">Boton Email</string>

</resources>


