<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".ContactoEmail">
    <include android:id="@+id/actionBarContacto"
        layout="@layout/actionbar"></include>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilNombreCompleto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/left"
        android:layout_below="@id/actionBarContacto"
        >


        <EditText
            android:id="@+id/etNombreCompleto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre_email"
            android:inputType="textPersonName"
             />

    </android.support.design.widget.TextInputLayout>




    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilCorreoElectronico"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tilNombreCompleto"
        android:layout_marginLeft="@dimen/left"
        android:layout_weight="10">

        <EditText
            android:id="@+id/etCorreoElectronico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:singleLine="true"
             />


    </android.support.design.widget.TextInputLayout>



    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilDescripcionMensaje"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tilCorreoElectronico"
        android:layout_marginLeft="@dimen/left"
        android:layout_weight="30">

        <EditText
            android:id="@+id/etDescripcionMensaje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/contenido_email"
            android:singleLine="true"
            android:layout_above="@+id/btnSiguiente" />





    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/boton_email"
        android:id="@+id/btnSiguiente"
         />

    </android.support.design.widget.TextInputLayout>


</RelativeLayout>
